--- a/src/app/pages/member/pay-weighing-fee-result/pay-weighing-fee-result.page.html
+++ b/src/app/pages/member/pay-weighing-fee-result/pay-weighing-fee-result.page.html
@@ -9,3 +9,7 @@
 <ion-content>
   <ion-img src="{{imageUrl}}" class="ion-margin"></ion-img>
 </ion-content>
+<ion-footer>
+ 
+  <ion-button expand="full"  (click)="print()">打印纸质磅单</ion-button>
+</ion-footer>
