--- a/src/app/pages/member/pay-weighing-fee/pay-weighing-fee.page.html
+++ b/src/app/pages/member/pay-weighing-fee/pay-weighing-fee.page.html
@@ -40,7 +40,7 @@
     <div class="ion-padding-top">
       <form [formGroup]="weightBillForm1" novalidate>
         <ion-card>
-        
+
           <ion-list lines="none">
             <ion-item>
               <ion-label>车牌号码*</ion-label>
@@ -70,7 +70,7 @@
         <ion-card>
           <ion-list lines="none">
 
-          
+
             <ion-item [ngClass]="(data.WeighingMode==1 ||data.WeighingMode==2||data.WeighingMode==3) ? 'ion-hide' : ''">
               <ion-label>皮重(车重)KG*</ion-label>
               <ion-input type="number" value="" placeholder="请输入皮重(车重),单位KG" formControlName="tareWeight"
@@ -85,6 +85,11 @@
               </ion-select>
             </ion-item>
             <ion-item>
+              <ion-label>备注/柜号</ion-label>
+              <ion-input type="text" value="" placeholder="可选" formControlName="equipmentNumber"
+                [(ngModel)]="data.EquipmentNumber"></ion-input>
+            </ion-item>
+            <ion-item>
               <ion-label>企业账号</ion-label>
               <ion-input type="text" value="" placeholder="无账号不需要输入" formControlName="corporateAccount"
                 [(ngModel)]="data.CorporateAccount"></ion-input>
@@ -96,7 +101,7 @@
             <ion-input type="number" value="" placeholder="磅单上显示的金额，与实际收费无关" formControlName="weighingFee"
               [(ngModel)]="data.WeighingFee"></ion-input>
           </ion-item> -->
-            
+
 
 
           </ion-list>
@@ -107,7 +112,7 @@
             <ion-radio-group formControlName="isReturn" [(ngModel)]="data.IsReturn">
               <ion-item>
                 <ion-label>第一次过磅</ion-label>
-                <ion-radio slot="end" value="false" ></ion-radio>
+                <ion-radio slot="end" value="false"></ion-radio>
               </ion-item>
 
               <ion-item>
@@ -121,14 +126,14 @@
     </div>
 
 
-    <ion-card >
+    <ion-card>
       <ion-card-header>
         <ion-card-title>温馨提示</ion-card-title>
       </ion-card-header>
 
       <ion-card-content>
         <p>1、过磅结束后，您可以查看电子榜单，同时纸质榜单 将打印在园区门口保安室。</p>
-        <p>2、收费规则：港车14元/次，其他其他车辆按含车重量，1元/吨最低14元/次。</p>
+        <p>2、收费规则：港车14元/次，其他车辆按含车重量，1元/吨最低14元/次。</p>
         <p>3、有疑问请致电：18148566788</p>
       </ion-card-content>
     </ion-card>
