--- a/src/app/pages/member/warehouse-application/warehouse-application.page.html
+++ b/src/app/pages/member/warehouse-application/warehouse-application.page.html
@@ -8,6 +8,15 @@
 </ion-header>
 
 <ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>温馨提示</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      本功能仅用于我司香港仓库的入仓申请(直接交货到我司香港仓库场景)。
+    </ion-card-content>
+  </ion-card>
   <div class="container">
     <ion-list>
       <div *ngIf="!applications || applications?.length === 0" class="empty-tip">
