--- a/src/app/pages/member/warehouse-application-detail/warehouse-application-detail.page.html
+++ b/src/app/pages/member/warehouse-application-detail/warehouse-application-detail.page.html
@@ -11,6 +11,15 @@
 </ion-header>
 
 <ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>温馨提示</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      本功能仅用于我司香港仓库的入仓申请(直接交货到我司香港仓库场景)。
+    </ion-card-content>
+  </ion-card>
   <form [formGroup]="form" (ngSubmit)="save()">
 
     <ion-list>
