--- a/src/app/pages/member/calculation-list/calculation-list.page.html
+++ b/src/app/pages/member/calculation-list/calculation-list.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
-      <ion-buttons slot="start">
-          <ion-back-button></ion-back-button>
-        </ion-buttons>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>计算结果</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,11 +13,16 @@
       <ion-label>{{item.PriceType}}</ion-label>
     </ion-segment-button>
   </ion-segment>
-  <ion-list class="result_list" >
+  <ion-list class="result_list">
     <ion-item detail *ngFor="let item of tabsData[currentTabIndex].PriceList" (click)="detail(item)">
-      <ion-label> 
-          <h2>{{item.PriceCode}}&nbsp;&nbsp;{{item.Series}}</h2>
-          <p>{{item.PriceName}}</ion-label>
+      <ion-label>
+
+        <h2>{{item.PriceCode}}&nbsp;&nbsp;{{item.Series}}</h2>
+        <p>{{item.PriceName}}</p>
+        <ion-text color="danger">
+          <p>{{item.ImportantTip}}</p>
+        </ion-text>
+      </ion-label>
       <ion-note slot="end" class="ion-margin-vertical">{{item.TotalAmount|currency:'CNY'}}</ion-note>
     </ion-item>
 
